manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: environment-lister-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: envs.yourdomain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: oauth2-proxy-environment-lister
            port:
              number: 80
  tls:
  - hosts:
    - envs.yourdomain.com
    secretName: certman-ingress-tls
